--- a/project/Ecommerce/css/style.css
+++ b/project/Ecommerce/css/style.css
@@ -72,7 +72,7 @@
     height: 100vh;
     width: 100%;
     background-color: gray;
-    background-image: url("../media/image/pexels-andrea.jpg");
+    background-image: url("../media/image/banner.jpg");
     background-size: cover;
     background-position: 0 50px;
     background-repeat: no-repeat;
@@ -151,10 +151,11 @@
 }
 .product{
     height: 500px;
-    width: 22%;
+    width: 30%;
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     align-items: flex-end;
     overflow: hidden;
@@ -164,25 +165,19 @@
     background-image: url("../media/image/product-1.jpeg");
 }
 .product:nth-child(2){
-    background-image: url("../media/image/product-2.jpeg");
+    background-image: url("../media/image/product-2.webp");
 }
 .product:nth-child(3){
-    background-image: url("../media/image/product-3.jpeg");
+    background-image: url("../media/image/product-3.jpg");
 }
 .product:nth-child(4){
-    background-image: url("../media/image/product-4.jpeg");
+    background-image: url("../media/image/product-4.jpg");
 }
 .product:nth-child(5){
-    background-image: url("../media/image/product-5.jpeg");
+    background-image: url("../media/image/product-5.png");
 }
 .product:nth-child(6){
-    background-image: url("../media/image/product-6.jpeg");
-}
-.product:nth-child(7){
-    background-image: url("../media/image/product-7.jpeg");
-}
-.product:nth-child(8){
-    background-image: url("../media/image/product-8.jpeg");
+    background-image: url("../media/image/product-6.jpg");
 }
 
 
@@ -301,8 +296,12 @@
     font-size: 70px;
     margin-bottom: 30px;
 }
-
 .gall_btn{
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+
+.gall_btn:hover{
     background-color: #292921;
     border: 1px solid #292921;
 }
@@ -375,7 +374,7 @@
 }
 
 .subscribe_container{
-    background-color: rgba(0, 0, 0, 0.72);
+    background-color: rgba(0, 0, 0, 0.9);
     width: 100%;
     height: 500px;
     flex-direction: column;
@@ -439,7 +438,9 @@
     font-weight: 500;
     margin-bottom: 15px;
 }
-
+.blogs{
+    list-style: disc;
+}
 .social{
     width: 80%;
     display: flex;
@@ -449,9 +450,14 @@
     width: 30px;
     margin-top: 10px;
 }
-.blogs{
-    list-style: disc;
+
+.icon1{
+    width: 100px;
+    margin-top: 20px;
+    margin-right: 10px;
+    cursor: pointer;
 }
+/* /////////////// copyright //////// */
 .copyright{
     width: 100%;
     height: 30px;
