--- a/project/martfury/style/style.css
+++ b/project/martfury/style/style.css
@@ -94,12 +94,12 @@ nav{
     background-color: #f6f6f6;
     list-style-type: none;
     font-family: Arial;
-    color: #666;
+    color: #000;
     display: none;
     z-index: 9;
     text-align: center;
 }
-.link3:hover  .dropdown{
+.link3:hover > .dropdown{
     display: block;
     z-index: 9;
 }
@@ -258,6 +258,20 @@ nav{
         opacity: 1;
     }
 }
+.slide_text{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    margin-top: 100px;
+}
+.banner_title{
+
+}
+
+/* ----------------------------------2nd nav ----------------------------------------- */
 .head_con{
     width: 90%;
     position: relative;
