--- a/project/martfury/style/style.css
+++ b/project/martfury/style/style.css
@@ -144,12 +144,12 @@ nav{
 }
 .slide:nth-child(3){
     background-color: pink;
-    background-image: url("../media/img/rvslider3.png");
+    background-image: url("../media/img/rvslider2.jpg");
     animation-name: slide3;
 }
 .slide:nth-child(4){
     background-color: orangered;
-    background-image: url("../media/img/rvslider2.jpg");
+    background-image: url("../media/img/rvslider3.png");
     animation-name: slide2;
 }
 .slide:nth-child(5){
@@ -268,7 +268,13 @@ nav{
     margin-top: 100px;
 }
 .banner_title{
-
+    font-size: 50px;
+}
+.banner_text{
+    color: #666;
+}
+.banner_text2{
+    color: #fff;
 }
 
 /* ----------------------------------2nd nav ----------------------------------------- */
