--- a/project/travel/css/mobile_style.css
+++ b/project/travel/css/mobile_style.css
@@ -1,36 +1,44 @@
 @media (min-width:320px) and (max-width:480px){
-    .container {
-        width: 100%;
-        height: 35px;
+    .header{
+        height: auto;
     }
-    .logo {
-        width: 100%;
-        height: 35px;
-        line-height: 35px;
+    .header:hover .nav{
+        height: 200px;
     }
-    .navigation {
+    .container{
         width: 100%;
-        font-size: 30px;
-        height: 70px;
-        display: inline-block;
-        margin: 0;
+        height: auto;
+        margin-left: 0%;
     }
-    .nav-link {
+    .logo{
         width: 100%;
-        height: 48px;
-        background-color: #00ad45;
-        margin-left: -36px;
-        font-size: 17px;
-        color: #fff;
-        font-weight: 600;
-        font-family: Segoe UI;
-        text-align: center;
-        line-height: 70px;
+        height: 50px;
+        line-height: 50px;
     }
+    .navigation{
+        width: 100%;
+        height: auto;
+        margin-left: 0%;
+    }
+    .nav{
+        height: 0px;
+        overflow: hidden;
+        transition: .4s;
+    }
+    .nav-link{
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+    }
+
+    /* /////////////////////////////// */
+
     .banner {
         width: 100%;
         height: auto;
-        overflow: hidden;
+    }
+    .banner_img{
+        width: 100%;
     }
     .places {
         padding-top: 30px;
@@ -68,5 +76,4 @@
         padding: 12px 16px;
         font-size: 15px;
     }
-
 }
