--- a/project/Ecommerce/css/style.css
+++ b/project/Ecommerce/css/style.css
@@ -4,7 +4,7 @@
 }
 /* Reuseable container */
 .container{
-    width: 80%;
+    width: 90%;
     display: flex;
 }
 
@@ -49,18 +49,18 @@
 }
 
 .navigation{
-    width: 50%;
+    width: 35%;
 }
 .nav{
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
     color: #25b196;
 }
 .nav-link{
     height: 70px;
-    width: 20%;
     font-family: segoe ui;
-    font-size: 18px;
+    font-size: 17px;
     text-align: center;
     line-height: 70px;
     font-weight: 600;
@@ -99,8 +99,7 @@
     color: white;
 }
 .btn{
-    padding: 20px 40px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     font-family: segoe ui;
     margin-top: 30px;
@@ -108,24 +107,63 @@
     border: 1px solid white;
     color: white;
     background-color: transparent;
+    width: 170px;
+    height: 50px;
 }
 
 .cut{
-    width: 45%;
+    width: 35%;
     height: 100%;
     border-radius: 10px;
     background-color: #00bb96;
     align-self: flex-start;
     transform: rotateZ(40deg);
     z-index: 1;
-    transition: .5s;
+    animation-name: cut;
+    animation-duration: .9s;
+    animation-delay: 2s;
+    animation-timing-function: ease-in;
 }
+@keyframes cut {
+    0%{
+        height: 0%;
+    }
+    10%{
+        height: 10%;
+    }
+    20%{
+        height: 20%;
+    }
+    30%{
+        height: 30%;
+    }
+    40%{
+        height: 40%;
+    }
+    50%{
+        height: 50%;
+    }
+    60%{
+        height: 60%;
+    }
+    70%{
+        height: 70%;
+    }
+    80%{
+        height: 80%;
+    }
+    90%{
+        height: 90%;
+    }
+    100%{
+        height: 100%;
+    }
+    
+    
+}
+
 /* ///////////////////// */
-.cut:hover{
-    width: 100%;
-    transform: rotateZ(0deg);
-}
-/* //////////////////// */
+
 
 
 /* product section */
@@ -144,18 +182,18 @@
 .products_section{
     width: 100%;
     display: flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     row-gap: 35px;
-    column-gap: 4%;
     margin-top: 40px;
 }
 .product{
-    height: 500px;
+    height: 400px;
     width: 30%;
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     display: flex;
     align-items: flex-end;
     overflow: hidden;
@@ -182,24 +220,18 @@
 
 
 .details{
-    height: 150px;
-    padding: 20px;
+    height: 130px;
+    padding: 10px;
     font-family: seoge ui;
     background-color: rgba(0, 0, 0, 0.72);
     color: white;
     display: flex;
     transition: 0.4s;
+    line-height: 30px;
 }
 
-.details_container{
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.details:hover{
-    height: 460px;
+.product:hover > .details{
+    height: 390px;
 }
 
 
@@ -413,7 +445,7 @@
     background-color: #c1c1c1;
 }
 .footer_container{
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .footer_child{
