--- a/project/Ecommerce/css/mobile_style.css
+++ b/project/Ecommerce/css/mobile_style.css
@@ -194,6 +194,222 @@
         height: 230px;
     }
 
+    /* ****** new product section ********* */
+    /* day 16 1:18:24 */
+
+    .new_products{
+        width: 100%;
+        height: 400px;
+        background-color: #007C64;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .gallery{
+        width: 100%;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        transition: .9s;
+        cursor: pointer;
+        animation-name: fade;
+        animation-duration: 30s;
+        animation-delay: 2s;
+        animation-iteration-count: infinite;
+    }
+    .gall-img{
+        height: 80%;
+    }
+
+    .gall_title{
+        font-size: 23px;
+        margin-bottom: 0px;
+    }
+
+    .gall_details{
+        width: 70%;
+        height: 100%;
+        font-size: 13px;
+        font-family: segoe ui;
+        display: flex;
+        align-items: center;
+    }
+    .gall_padd{
+        padding: 0px;
+    }
+    
+    .gall_btn{
+        background-color: transparent;
+        border: 1px solid #fff;
+    }
+
+    .gall_btn:hover{
+        background-color: #292921;
+        border: 1px solid #292921;
+    }
+
+    .gallery_1{
+        background-color: #71D7C3;
+        margin-left: 0%;
+        animation-name: slide2;
+    }
+    .gallery_2{
+        background-color: #45C2AA;
+        margin-left: 0%;
+        animation-name: slide3;
+    }
+    .gallery_3{
+        background-color: #01A686;
+        margin-left: 0%;
+        animation-name: slide4;
+    }
+    .gallery_4{
+        background-color: #007C64;
+        margin-left: 0%;
+        animation-name: slide5;
+    }
+
+    @keyframes slide1 {
+        0%{
+            opacity: 0;
+        }
+        20%{
+            opacity: 1;
+        }
+        40%{
+            opacity: 0;
+        }
+        60%{
+            opacity: 0;
+        }
+        80%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    @keyframes slide2 {
+        0%{
+            opacity: 0;
+        }
+        20%{
+            opacity: 0;
+        }
+        40%{
+            opacity: 1;
+        }
+        60%{
+            opacity: 0;
+        }
+        80%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    @keyframes slide3 {
+        0%{
+            opacity: 0;
+        }
+        20%{
+            opacity: 0;
+        }
+        40%{
+            opacity: 0;
+        }
+        60%{
+            opacity: 1;
+        }
+        80%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    @keyframes slide4 {
+        0%{
+            opacity: 0;
+        }
+        20%{
+            opacity: 0;
+        }
+        40%{
+            opacity: 0;
+        }
+        60%{
+            opacity: 0;
+        }
+        80%{
+            opacity: 1;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    @keyframes slide5 {
+        0%{
+            opacity: 0;
+        }
+        20%{
+            opacity: 0;
+        }
+        40%{
+            opacity: 0;
+        }
+        60%{
+            opacity: 0;
+        }
+        80%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 1;
+        }
+    }
+
+
+
+    .gallery_4:hover{
+        margin-left: 0px;
+    }
+    .gallery_3:hover{
+        margin-left: 0px;
+    }
+    .gallery_3:hover ~ .gallery_4{
+        margin-left: 100%;
+    }
+    .gallery_2:hover{
+        margin-left: 0px;
+    }
+    .gallery_2:hover ~ .gallery_3{
+        margin-left: 100%;
+    }
+    .gallery_2:hover ~ .gallery_4{
+        margin-left: 100%;
+    }
+    .gallery_1:hover{
+        margin-left: 0px;
+    }
+    .gallery_1:hover ~ .gallery_2{
+        margin-left: 100%;
+    }
+    .gallery_1:hover ~ .gallery_3{
+        margin-left: 100%;
+    }
+    .gallery_1:hover ~ .gallery_4{
+        margin-left: 100%;
+    }
+
+
+
+
+    
+
 
 
 
