--- a/project/Ecommerce/css/style.css
+++ b/project/Ecommerce/css/style.css
@@ -240,7 +240,7 @@
 
 .new_products{
     width: 100%;
-    height: 90vh;
+    height: 530px;
     background-color: red;
     position: relative;
     overflow: hidden;
@@ -248,7 +248,7 @@
 
 .gallery{
     width: 100%;
-    height: 90vh;
+    height: 530px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -259,15 +259,15 @@
 }
 .gallery_1{
     background-color: #71D7C3;
-    margin-left: -5%;
+    margin-left: 0%;
 }
 .gallery_2{
     background-color: #45C2AA;
-    margin-left: 21%;
+    margin-left: 25%;
 }
 .gallery_3{
     background-color: #01A686;
-    margin-left: 45%;
+    margin-left: 50%;
 }
 .gallery_4{
     background-color: #007C64;
