--- a/project/Ecommerce/css/style.css
+++ b/project/Ecommerce/css/style.css
@@ -30,6 +30,7 @@
     background-color: rgba(255,255,255, 01);
     position: fixed;
     z-index: 7;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .header_container{
